--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -13,11 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/roboto_mono"
+        android:textColor="@color/dodger_blue"
         android:layout_marginBottom="15dp"
         android:gravity="center"
         android:layout_centerHorizontal="true"
         android:text="@string/reg"
-        android:textSize="25dp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 <!--    <TextView-->
 <!--        android:id="@+id/fstTxt"-->
@@ -52,9 +55,6 @@
         app:startIconTint="#000000"
         app:hintTextColor="@color/blue"
         android:layout_below="@id/registrationscrn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registrationscrn"
 
         >
 
@@ -99,9 +99,6 @@
         app:startIconTint="#000000"
         app:hintTextColor="@color/blue"
         android:layout_below="@id/inputName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view5"
 
         >
 
@@ -146,9 +143,6 @@
         app:startIconTint="#000000"
         app:hintTextColor="@color/blue"
         android:layout_below="@id/inputEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view5"
 
         >
 
@@ -192,10 +186,7 @@
         app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
         app:startIconTint="#171515"
         android:layout_below="@id/inputMobile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
-        >
+       >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/pass"
@@ -221,9 +212,6 @@
         android:layout_marginRight="30dp"
         android:onClick="Register"
         android:layout_below="@id/inputPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
         android:background="@color/colorPrimary">
 
         <TextView
