--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -298,6 +298,7 @@
                 android:layout_width="130dp"
                 android:layout_height="150dp"
                 android:layout_margin="10dp"
+                android:id="@+id/profilebtn"
                 android:backgroundTint="@color/azure"
                 app:cardElevation="5dp">
 
