--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -210,7 +210,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
-        android:onClick="Register"
+        android:onClick="reg"
         android:layout_below="@id/inputPassword"
         android:background="@color/colorPrimary">
 
