--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -393,6 +393,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:id="@+id/meetings"
                 android:layout_marginRight="10dp"
                 android:orientation="vertical">
 
@@ -416,6 +417,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:id="@+id/contacts"
                 android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
@@ -439,6 +441,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:id="@+id/settings"
                 android:orientation="vertical">
 
                 <ImageView
