--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -66,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:id="@+id/nevhome"
                     android:orientation="vertical">
 
                     <ImageView
@@ -88,6 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
+                    android:id="@+id/meetings"
                     android:orientation="vertical">
 
                     <ImageView
@@ -132,6 +134,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/settings"
                     android:layout_marginLeft="10dp"
                     android:orientation="vertical">
 
