--- a/app/src/main/res/layout/activity_meetings.xml
+++ b/app/src/main/res/layout/activity_meetings.xml
@@ -66,6 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:id="@+id/nevhome"
                     android:orientation="vertical">
 
                     <ImageView
@@ -110,6 +111,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
+                    android:id="@+id/contacts"
                     android:layout_marginLeft="10dp"
                     android:orientation="vertical">
 
@@ -133,6 +135,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:id="@+id/settings"
                     android:orientation="vertical">
 
                     <ImageView
