Bottom Nav Full

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Meetings"
+                android:text="Setings"
                 android:textSize="24sp"
                 android:textColor="@color/dodger_blue"
                 android:textAlignment="center"
@@ -65,6 +65,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/nevhome"
                     android:layout_marginRight="10dp"
                     android:orientation="vertical">
 
@@ -87,6 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:id="@+id/meetings"
                     android:layout_marginRight="10dp"
                     android:orientation="vertical">
 
@@ -109,6 +111,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/contacts"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="10dp"
                     android:orientation="vertical">
