--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -271,25 +271,25 @@
     android:id="@+id/btnSignout"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-
+    android:onClick="signOut"
     android:layout_marginTop="30dp"
 
 
     android:layout_below="@id/card6"
     android:background="@color/colorPrimary">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="8dp"
-        android:letterSpacing="0.3"
-        android:text="@string/signout"
-        android:textColor="@color/red"
-        android:textSize="22sp"
-        android:textStyle="bold">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="8dp"
+            android:letterSpacing="0.3"
+            android:text="@string/signout"
+            android:textColor="@color/red"
+            android:textSize="22sp"
+            android:textStyle="bold">
 
-    </TextView>
+        </TextView>
 
 </RelativeLayout>
 
