--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Application Name"
+            android:text="Online Meeting App"
             android:textSize="24sp"
             android:textColor="@color/dodger_blue"
             android:textAlignment="center"
