--- a/app/src/main/res/layout/activity_create_meeting.xml
+++ b/app/src/main/res/layout/activity_create_meeting.xml
@@ -53,7 +53,7 @@
                     android:inputType="text"/>
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/button1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
