--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/dodger_blue"
             app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            >
+            app:cardUseCompatPadding="true">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -29,8 +28,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
-                android:fontFamily="@font/roboto_mono"
-                />
+                android:fontFamily="@font/roboto_mono" />
 
 
         </androidx.cardview.widget.CardView>
@@ -49,10 +47,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardBackgroundColor="@color/white"
-
                     app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true"
-                    >
+                    app:cardUseCompatPadding="true">
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
