--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/scrolhistory"
-            android:background="@color/ivory"
+            android:background="@color/gainsboro"
             android:layout_marginBottom="100dp"
             android:layout_below="@+id/appname">
 
