--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -10,28 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/appname"
-            android:paddingBottom="10dp"
-            android:backgroundTint="@color/ghost_white"
-            android:outlineAmbientShadowColor="@color/black"
-            app:cardElevation="10dp"
-            android:paddingTop="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Contacts"
-                android:textSize="24sp"
-                android:textColor="@color/dodger_blue"
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:textStyle="bold"/>
-
-        </androidx.cardview.widget.CardView>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -39,7 +18,7 @@
             android:id="@+id/scrolhistory"
             android:background="@color/gainsboro"
             android:layout_marginBottom="100dp"
-            android:layout_below="@+id/appname">
+           android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:id="@+id/linearLayout"
