--- a/app/src/main/res/layout/activity_meetings.xml
+++ b/app/src/main/res/layout/activity_meetings.xml
@@ -37,7 +37,7 @@
             android:layout_height="match_parent"
             android:id="@+id/scroll"
             android:layout_below="@id/appname"
-            android:background="@color/floral_white"
+            android:background="@color/gainsboro"
             android:layout_marginBottom="100dp"
             >
 
